[gd_scene load_steps=2 format=3 uid="uid://8jhshtlfjew0"]

[ext_resource type="Script" path="res://demo/scripts/fake_game_demo.gd" id="1_35jwv"]

[node name="FakeGameDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_35jwv")
LeaderboardKey = ""
lower_score = 3
upper_score = 80
[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Spacer" type="TextureRect" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.643137, 0.643137, 0.776471, 1)
text = "This demo purpose is to simulate a typical game, clikcing on \"Play Game\" button below will wait for a little time, simulating a game session, getting some high-score then submit it and display the leaderboard.
Will you beat your record and get a top score ?
Click to find out."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Status" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Status: ------------"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerName" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Player's name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Play Game"

[node name="Score" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Score: 000000"

[node name="Leaderboard" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 24

[node name="Back" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back
"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
